--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,14 +1,37 @@
-<p style="color: green"><%= notice %></p>
+<p id="notice"><%= notice %></p>
 
 <h1>Items</h1>
 
-<div id="items">
-  <% @items.each do |item| %>
-    <%= render item %>
-    <p>
-      <%= link_to "Show this item", item %>
-    </p>
-  <% end %>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Weight</th>
+      <th>Length</th>
+      <th>Storage detail</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<%= link_to "New item", new_item_path %>
+  <tbody>
+    <% @items.each do |item| %>
+    <tr>
+      <td><%= item.name %></td>
+      <td><%= item.description %></td>
+      <td><%= item.weight %></td>
+      <td><%= item.length %></td>
+      <td><%= item.storage_detail %></td>
+      <td><%= link_to 'Show', item %></td>
+      <td><%= link_to 'Edit', edit_item_path(item) %></td>
+      <td>
+        <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?'} %>
+      </td>
+    </tr>
+   
+    <% end %>
+  </tbody>
+</table>
+<br />
+
+<%= link_to 'New Item', new_item_path %>
