--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+     <nav>
+     Menu : 
+       <ul>
+          <li><%= link_to("Buildings", buildings_path) %> </li>
+          <li><%= link_to("Rooms", rooms_path) %> </li>
+          <li><%= link_to("Items", items_path) %> </li>
+       </ul>
+     </nav>
     <%= yield %>
   </body>
 </html>
