--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div>
     <%= form.label :building_id, style: "display: block" %>
-    <%= form.text_field :building_id %>
+    <%= form.collection_select(:building_id, Building.all, :id, :name) %>
   </div>
 
   <div>
