--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,13 +2,30 @@
 
 <h1>Rooms</h1>
 
-<div id="rooms">
-  <% @rooms.each do |room| %>
-    <%= render room %>
-    <p>
-      <%= link_to "Show this room", room %>
-    </p>
-  <% end %>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Building</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<%= link_to "New room", new_room_path %>
+  <tbody>
+  <% @rooms.each do |room| %>
+        <td><%= room.id %></td>
+        <td><%= room.description %></td>
+        <td><%= room.building %></td>
+        <td><%= link_to 'Show', room %></td>
+        <td><%= link_to 'Edit', edit_room_path(room) %></td>
+        <td>
+        <%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?'} %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+<br />
+
+<%= link_to 'New Room', new_room_path %>
